# custodian

./: .prettierignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
coverage/: coverage.json  index.html
coverage/opaque/src/: envelope.rs.html  errors.rs.html  group.rs.html  impls.rs.html  index.html  keypair.rs.html  map_to_curve.rs.html  messages.rs.html  opaque.rs.html  oprf.rs.html  slow_hash.rs.html
coverage/opaque/src/key_exchange/: index.html  tripledh.rs.html
coverage/opaque/src/serialization/: index.html  mod.rs.html
coverage/password/benches/: cipher_suites.rs.html  index.html
coverage/password/examples/: basic.rs.html  index.html
coverage/password/src/: cipher_suite.rs.html  client.rs.html  config.rs.html  error.rs.html  export_key.rs.html  index.html  lib.rs.html  message.rs.html  public_key.rs.html  server.rs.html
coverage/password/src/cipher_suite/: argon2d.rs.html  blake3.rs.html  export_key.rs.html  impls.rs.html  index.html  mod.rs.html  p256.rs.html  pbkdf2.rs.html  public_key.rs.html
coverage/password/src/client/: impls.rs.html  index.html
coverage/password/src/server/: impls.rs.html  index.html
main/: crates.js  search-index.js  settings.html  source-files.js
main/custodian_password/: all.html  enum.Ake.html  enum.Argon2Algorithm.html  enum.Error.html  enum.Group.html  enum.Hash.html  enum.Mhf.html  enum.Pbkdf2Hash.html  enum.SlowHash.html  index.html  sidebar-items.js  struct.Argon2Params.html  struct.ClientConfig.html  struct.ClientFile.html  struct.ClientLogin.html  struct.ClientRegistration.html  struct.Config.html  struct.ExportKey.html  struct.LoginFinalization.html  struct.LoginRequest.html  struct.LoginResponse.html  struct.Pbkdf2Params.html  struct.PublicKey.html  struct.RegistrationFinalization.html  struct.RegistrationRequest.html  struct.RegistrationResponse.html  struct.ServerConfig.html  struct.ServerFile.html  struct.ServerLogin.html  struct.ServerRegistration.html  type.Result.html
main/custodian_password/client/: index.html  sidebar-items.js  struct.ClientConfig.html  struct.ClientFile.html  struct.ClientLogin.html  struct.ClientRegistration.html  struct.Login.html  struct.LoginRequest.html  struct.LoginResponse.html  struct.Register.html  struct.RegistrationRequest.html  struct.RegistrationResponse.html
main/custodian_password/config/: enum.Ake.html  enum.Argon2Algorithm.html  enum.Group.html  enum.Hash.html  enum.Mhf.html  enum.Pbkdf2Hash.html  enum.SlowHash.html  struct.Argon2Params.html  struct.Config.html  struct.Pbkdf2Params.html
main/custodian_password/error/: enum.Error.html  enum.InternalError.html  enum.InternalPakeError.html  enum.PakeError.html  enum.ProtocolError.html  index.html  sidebar-items.js  type.Result.html
main/custodian_password/export_key/: struct.ExportKey.html
main/custodian_password/message/: struct.LoginFinalization.html  struct.LoginRequest.html  struct.LoginResponse.html  struct.RegistrationFinalization.html  struct.RegistrationRequest.html  struct.RegistrationResponse.html
main/custodian_password/public_key/: struct.PublicKey.html
main/custodian_password/server/: index.html  sidebar-items.js  struct.Login.html  struct.LoginResponse.html  struct.Registration.html  struct.RegistrationBuilder.html  struct.RegistrationResponse.html  struct.ServerConfig.html  struct.ServerFile.html  struct.ServerLogin.html  struct.ServerRegistration.html
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/implementors/core/convert/: trait.AsRef.js  trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/ops/deref/: trait.Deref.js
main/implementors/core/ops/drop/: trait.Drop.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/opaque_ke/ciphersuite/: trait.CipherSuite.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/error/: trait.Error.js
main/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/structopt/: trait.StructOptInternal.js
main/implementors/zeroize/: trait.Zeroize.js
main/src/custodian_password/: cipher_suite.rs.html  client.rs.html  config.rs.html  error.rs.html  export_key.rs.html  lib.rs.html  message.rs.html  public_key.rs.html  server.rs.html
main/src/custodian_password/cipher_suite/: argon2d.rs.html  blake3.rs.html  export_key.rs.html  impls.rs.html  mod.rs.html  p256.rs.html  pbkdf2.rs.html  public_key.rs.html
main/src/custodian_password/client/: impls.rs.html
main/src/custodian_password/server/: impls.rs.html
main/src/xtask/: main.rs.html
main/xtask/: all.html  enum.Commands.html  fn.main.html  index.html  struct.CoverageConfig.html
opaque/: Cargo.toml  README.md
opaque/src/: envelope.rs  keypair.rs
opaque/src/key_exchange/: tripledh.rs
opaque/src/serialization/: tests.rs
password/: Cargo.toml
password/benches/: cipher_suites.rs
password/examples/: basic.rs
password/src/: cipher_suite.rs  client.rs  config.rs  error.rs  export_key.rs  lib.rs  message.rs  messages.rs  public_key.rs  server.rs
password/src/cipher_suite/: argon2d.rs  blake3.rs  export_key.rs  impls.rs  mod.rs  p256.rs  pbkdf2.rs  public_key.rs
password/src/client/: impls.rs
password/src/server/: impls.rs
xtask/: Cargo.toml
xtask/src/: main.rs
