[package]
name = "custodian-opaque"
version = "0.6.0-pre.1"
description = "opaque-ke fork for Custodian"
readme = "README.md"
license = "MIT"
repository = "https://github.com/khonsulabs/custodian"
keywords = ["cryptography", "crypto", "opaque", "passwords", "authentication"]
categories = ["authentication"]
edition = "2018"

[features]
default = ["u64_backend", "serialize"]
slow-hash = ["argon2"]
bench = []
u64_backend = ["curve25519-dalek/u64_backend"]
#u32_backend = ["curve25519-dalek/u32_backend"]
serialize = ["serde", "base64", "generic-array/serde", "curve25519-dalek/serde"]

[dependencies]
argon2 = { version = "0.2", optional = true }
base64 = { version = "0.13", optional = true }
curve25519-dalek = { version = "3.1.0", default-features = false, features = [
	"std"
] }
digest = "0.9.0"
displaydoc = "0.1.7"
generic-array = "0.14.4"
generic-bytes = { version = "0.1.0" }
hkdf = "0.11.0"
hmac = "0.11.0"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
subtle = { version = "2.3.0", default-features = false }
thiserror = "1.0.22"
zeroize = { version = "1.1.1", features = ["zeroize_derive"] }

[dev-dependencies]
anyhow = "1.0.35"
base64 = "0.13.0"
bincode = "1"
criterion = "0.3.3"
hex = "0.4.2"
lazy_static = "1.4.0"
serde_json = "1.0.60"
sha2 = "0.9.2"
proptest = "0.10.1"
rustyline = "6.3.0"

[lib]
test = false
doctest = false
doc = false
bench = false
