[package]
name = "custodian-password"
version = "0.0.0-dev.1"
description = "Password management simplified."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/custodian"
keywords = ["password", "authentication", "login", "pake", "opaque"]
categories = ["authentication"]
edition = "2018"

[features]
default = ["sha3"]
pbkdf2 = ["hmac", "pbkdf2_"]

[dependencies]
argon2 = "0.2"
blake3 = { version = "0.3", optional = true }
curve25519-dalek = "3"
digest = "0.9"
generic-array = { version = "0.14", features = ["more_lengths"] }
hmac = { version = "0.11", optional = true }
opaque-ke = { package = "custodian-opaque", path = "../opaque", version = "0.6.0-pre.1", features = [
	"slow-hash"
] }
pbkdf2_ = { package = "pbkdf2", version = "0.8", default-features = false, optional = true }
serde-big-array = { version = "0.3", features = ["const-generics"] }
sha2 = "0.9"
sha3 = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
bincode = "1"
criterion = "0.3"

[[bench]]
name = "cipher_suites"
harness = false
