[package]
name = "custodian-password"
version = "0.0.0-dev.1"
description = "Password management simplified."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/custodian"
keywords = ["password", "authentication", "login", "pake", "opaque"]
categories = ["authentication"]
edition = "2018"

[features]
default = ["blake3"]
p256 = ["opaque-ke/p256", "p256_"]
pbkdf2 = ["hmac", "pbkdf2_"]

[dependencies]
argon2 = "0.3"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
blake3 = { version = "1", features = ["traits-preview"], optional = true }
curve25519-dalek = "3"
digest = "0.9"
generic-array = { version = "0.14", features = ["more_lengths"] }
hmac = { version = "0.11", optional = true }
opaque-ke = { git = "https://github.com/novifinancial/opaque-ke", features = [
	"slow-hash",
	"std"
] }
p256_ = { package = "p256", version = "0.9", optional = true }
pbkdf2_ = { package = "pbkdf2", version = "0.9", default-features = false, optional = true }
sha2 = "0.9"
sha3 = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde-big-array = { version = "0.3", features = ["const-generics"] }
thiserror = "1"
zeroize = "1"

[dev-dependencies]
anyhow = "1"
bincode = "1"
criterion = "0.3"

[[bench]]
name = "cipher_suites"
harness = false
