[package]
name = "custodian-password"
version = "0.0.0-dev.1"
description = "Password management simplified."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/custodian"
keywords = ["password", "authentication", "login", "pake", "opaque"]
categories = ["authentication"]
edition = "2021"

[features]
default = ["blake3"]
p256 = ["opaque-ke/p256", "p256_"]
parallel = ["argon2/parallel"]
pbkdf2 = ["hmac", "pbkdf2_"]

[dependencies]
argon2 = "0.3"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }
blake3 = { version = "=1.2", features = ["traits-preview"], optional = true }
curve25519-dalek = "3"
deranged = { version = "0.2", features = ["serde"] }
digest = "0.9"
generic-array = { version = "0.14", features = ["more_lengths"] }
hmac = { version = "0.11", optional = true }
opaque-ke = { git = "https://github.com/daxpedda/opaque-ke", rev = "b225879eda03fbd20f2724509b8d80e5c05ef4af", features = [
	"slow-hash",
	"std",
] }
p256_ = { package = "p256", version = "0.9", optional = true }
pbkdf2_ = { package = "pbkdf2", version = "0.9", default-features = false, optional = true }
sha2 = "0.9"
sha3 = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde-big-array = { version = "0.3", features = ["const-generics"] }
subtle = "2"
thiserror = "1"
voprf = { git = "https://github.com/daxpedda/voprf", rev = "af90af97d52805775888a578253c669ed68df16b", default-features = false, features = [
	"danger",
] }
zeroize = "1"

[dev-dependencies]
anyhow = "1"
bincode = "1"
criterion = "0.3"

[[bench]]
name = "cipher_suites"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = []
